<?xml version="1.0"?>
<package>
  <name>dashboard_msgs</name>
  <version>0.0.1</version>
  <description>Simple messages for bringing up and controling the state of a robot</description>

  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/davetcoleman/dashboard_msgs</url>
  <url type="butracker">https://github.com/davetcoleman/dashboard_msgs/issues</url>
  <url type="repository">https://github.com/davetcoleman/dashboard_msgs/</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
